# CaloLogger-Backend-TeamTwo

./: .env.test  .gitignore  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: local-tests.yaml  quality-check.yml  quality.yaml  remote-tests.yaml  tests.yaml  unit.yaml
__tests__/common/: DatetimeHelpers.py
__tests__/integration/: test_MealRouter.py
__tests__/local/integration/: test_MealRouter.py
__tests__/local/repositories/: test_MealRepository.py  test_WeightRepository.py
__tests__/local/services/: test_MealService.py  test_WeightService.py
__tests__/remote/: test_Ui.py
__tests__/repositories/: test_AuthorRepository.py  test_BookRepository.py  test_WeightRepository.py
__tests__/services/: test_AuthorService.py  test_BookService.py  test_MealService.py
app/: main.py
app/clients/: CaloriteNinjasClient.py
app/configs/: Database.py  Environment.py
app/metadata/: Tags.py
app/models/: MealModel.py  UserModel.py  WeightModel.py
app/repositories/: MealRepository.py  UserRepository.py  WeightRepository.py
app/routers/v1/: AuthRouter.py  MealRouter.py  WeightRouter.py  auth.py
app/services/: MealService.py  UserService.py  WeightService.py
configs/: Database.py  Environment.py
metadata/: Tags.py
models/: MealModel.py  WeightModel.py
repositories/: MealRepository.py  UserRepository.py  WeightRepository.py
routers/v1/: AuthRouter.py  MealRouter.py  WeightRouter.py
schemas/pydantic/: MealSchema.py  WeightSchema.py
scripts/: seleniumTest.py
services/: MealService.py  WeightService.py
(+2 files in other folders)
