[tool.poetry]
name = "calo-logger"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
httpx = "^0.27.0"
flake8 = "^7.0.0"
bandit = "^1.7.8"
radon = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
